# DAILYDOCO

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  HUMAIN27_COMPLETION_SUMMARY.md  README.md  TASKS.md  nx.json  package-lock.json  package.json
.nx/cache/: file-map.json  nx_files.nxt  project-graph.json
.nx/cache/d/: server-process.json
R&D/aegntix-ui/aegntix-mvp/: package.json
R&D/youtube-intelligence-engine/web-interface/src/lib/: api.ts
apps/api-server/: package.json  tsconfig.json
apps/api-server/src/: index.ts
apps/api-server/src/config/: logger.ts
apps/api-server/src/middleware/: auth.ts  errorHandler.ts  validation.ts
apps/api-server/src/routes/: ai.ts  auth.ts  capture.ts  projects.ts
apps/browser-ext/: package.json
apps/desktop/: CONTRIBUTING.md  Cargo.toml  README.md  tauri.conf.json
apps/desktop/docs/api/: README.md
apps/desktop/docs/guides/: quick-start.md
apps/desktop/examples/: advanced_customization.rs  basic_integration.rs  multi_platform_deployment.rs  performance_optimization.rs
apps/desktop/src/: commands.rs  config.rs  fingerprinting.rs  lib.rs  main.rs  performance.rs  privacy.rs  storage.rs  video.rs
apps/desktop/src/ai/: mod.rs
apps/desktop/src/ai/models/: deepseek_r1.rs  gemma_3.rs  mod.rs  openrouter_integration.rs
apps/desktop/src/capture/: activity.rs  mod.rs  monitors.rs  native.rs  privacy.rs  privacy_corrupted.rs  screen.rs
apps/desktop/src/config/: mod.rs
apps/desktop/src/mouse/: mod.rs
apps/desktop/src/utils/: crypto.rs  environment.rs  error.rs  math.rs  mod.rs
apps/mcp-server/: package.json
apps/mcp-server/src/: index.ts
apps/mcp-server/src/tools/: project-fingerprinter.ts
apps/web-dashboard/: package.json  tailwind.config.js
apps/web-dashboard/src/: App.tsx  index.css
apps/web-dashboard/src/components/: ApprovalWorkflow.tsx  ExportManager.tsx  PricingPage.tsx  RealTimePreview.tsx  RevenueAnalyticsDashboard.tsx  RevenueOptimizationMasterDashboard.tsx  SimpleDashboard.tsx  StatusDashboard.tsx
draft-web-designs/: dailydoco-design-1.html  dailydoco-design-2.html  dailydoco-design-3.html  dailydoco-funnel-1.html  dailydoco-funnel-2.html  dailydoco-funnel-3.html  data_dashboard_dailydoco.html  zen_dailydoco.html
libs/aegnt-27/: Cargo.toml
libs/ai-models/src/: ai_detection_validator.rs  audio_spectral_humanizer.rs  mod.rs  mouse_humanizer.rs  natural_speech_generator.rs  typing_humanizer.rs  visual_authenticity_enhancer.rs
libs/shared-types/: package.json
libs/shared-types/src/: index.ts
libs/shared-types/src/features/: human-fingerprint.types.ts
